more citation styles, and tests

--- a/python/fatcat_web/templates/release_view.html
+++ b/python/fatcat_web/templates/release_view.html
@@ -415,6 +415,9 @@
   </div>
   <div class="content">
     <a href="/release/{{ release.ident }}.bib">BibTeX</a>
+    <br><a href="/release/{{ release.ident }}/citeproc?style=csl-json">CSL-JSON</a>
+    <br><a href="/release/{{ release.ident }}/citeproc?style=modern-language-association">MLA</a>
+    <br><a href="/release/{{ release.ident }}/citeproc?style=elsevier-harvard">Harvard</a>
   </div>
 </div>
 {% endif %}
