fix container url form width

--- a/python/fatcat_web/templates/container_edit.html
+++ b/python/fatcat_web/templates/container_edit.html
@@ -31,7 +31,7 @@
       <div class="one wide column middle aligned center aligned sortable-handle" style="padding-bottom: 0px; padding-right: 0px; padding-left: 0px;">
         <i class="arrows alternate vertical icon"></i>
       </div>
-      <div class="thirteen wide column" style="padding-bottom: 0px;">
+      <div class="fourteen wide column" style="padding-bottom: 0px;">
         <div class="field {% if cfield.errors %}error{% endif %}">
           {{ cfield() }}
           {{ edit_macros.form_field_errors(cfield) }}
