remove title from metadata macro

--- a/python/fatcat_web/templates/creator_view.html
+++ b/python/fatcat_web/templates/creator_view.html
@@ -32,6 +32,7 @@
 {% endif %}
 
 {% if entity.extra != None %}
+  <h3>Extra Metadata (raw JSON)</h3>
   {{ entity_macros.extra_metadata(entity.extra) }}
 {% endif %}
 
