--- a/python/fatcat_web/templates/container_view.html
+++ b/python/fatcat_web/templates/container_view.html
@@ -41,6 +41,7 @@
 
 
 {% if entity.extra %}
+  <h3>Extra Metadata (raw JSON)</h3>
   {{ entity_macros.extra_metadata(entity.extra) }}
 {% endif %}
 
