--- a/python/fatcat_web/templates/release_view.html
+++ b/python/fatcat_web/templates/release_view.html
@@ -191,6 +191,7 @@
 
 
 {% if entity.extra %}
+  <h3>Extra Metadata (raw JSON)</h3>
   {{ entity_macros.extra_metadata(entity.extra) }}
 {% endif %}
 
