--- a/python/fatcat_web/templates/work_view.html
+++ b/python/fatcat_web/templates/work_view.html
@@ -17,6 +17,7 @@
 <div class="ten wide column" style="font-size: 16px;">
 
 {% if entity.extra != None %}
+  <h3>Extra Metadata (raw JSON)</h3>
   {{ entity_macros.extra_metadata(entity.extra) }}
 {% endif %}
 
