IA login button as actual form input/submit

--- a/python/fatcat_web/templates/auth_ia_login.html
+++ b/python/fatcat_web/templates/auth_ia_login.html
@@ -28,7 +28,7 @@
         <input type="password" placeholder="Password" name="password" aria-label="internet archive password">
       </div>
       <br>
-      <button class="ui primary large button fluid">Login</button>
+      <input type="submit" value="Sign In" class="ui primary large button fluid"></input>
     </div>
   </form>
 {% endif %}
