github login via OAuth, not OIDC

--- a/python/fatcat_web/templates/auth_login.html
+++ b/python/fatcat_web/templates/auth_login.html
@@ -89,7 +89,7 @@ Note that currently editor accounts are locked 1-to-1 with external identities.
     <i class="github icon"></i>
     <div class="content">
       Github
-      <div class="sub header">via OpenID Connect</div>
+      <div class="sub header">via OAuth</div>
     </div>
   </h2>
 </div>
